# cedt-algo-trading-final-project

./: .gitignore  README.md  pyproject.toml
notebooks/: trying_vectorbt.ipynb  xauusd_backtesting.ipynb  xauusd_vectorbt.ipynb
src/: utils.py
