[project]
name = "algo-trading-cedt-final-project"
version = "0.1.0"
requires-python = ">=3.12,<=3.13"
dependencies = [
    "backtesting>=0.6.5",
    "dotenv>=0.9.9",
    "ezyquant>=0.9.6",
    "gdown>=5.2.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "nbstripout>=0.9.1",
    "notebook>=7.5.5",
    "pandas<3.0.0",
    "tvdatafeed",
    "vectorbt[full]>=0.28.5",
]

[tool.uv.sources]
tvdatafeed = { git = "https://github.com/rongardF/tvdatafeed.git" }
